--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>Jardincito</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="keyframes.css">
 	</head>
 	<body>
 		<div class="containerA">
@@ -21,7 +22,7 @@
 			<img class="flowers" src="images/flower2.png" alt="flowers">
 			<img class="flowers" src="images/cactus.png" alt="flowers">
 			<img class="flowers" src="images/flower3.png" alt="flowers">
-			<img src="images/plant.png" alt="flowers" width="110" margin="0px 15px"> <!--planta con medidas mas especificas-->
+			<img class="flowers especial-one"src="images/plant.png" alt="flowers">
 			<img class="flowers" src="images/flower4.png" alt="flowers">
 			<img class="flowers" src="images/garden-plant.png" alt="flowers">
 			<img class="flowers" src="images/flower.png" alt="flowers">
