creo container principal + reescritura de los keyframes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
-	<head>
-		<title>Jardincito</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="keyframes.css">
-	</head>
-	<body>
+<head>
+	<title>Jardincito</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="keyframes.css">
+</head>
+<body>
+	<div class="containerPrincipal">
 		<div class="containerA">
 			<img class="clouds cloud-1" src="images/cloud.png" alt="cloud">
 			<img class="clouds cloud-2" src="images/cloud.png" alt="cloud">
@@ -29,6 +30,6 @@
 		</div>
 
 		<div class="grass"></div>
-
-	</body>
+	</div>
+</body>
 </html>
