--- a/index.html
+++ b/index.html
@@ -3,23 +3,34 @@
 	<title>Jardincito</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="keyframes.css">
+	<script type="text/javascript" src="main.js"></script>
 </head>
 <body>
 	<div class="containerPrincipal">
-		<div class="containerA">
-			<img class="clouds cloud-1" src="images/cloud.png" alt="cloud">
-			<img class="clouds cloud-2" src="images/cloud.png" alt="cloud">
-			<img class="clouds cloud-3" src="images/cloud.png" alt="cloud">
-			<img class="clouds cloud-4" src="images/cloud.png" alt="cloud">
-			<img class="sun" src="images/sun.png" alt="sun">
-			<img class="moon" src="images/moon.png" alt="moon">
+
+		<div class="allClouds">
+			<div class="containerClouds">
+				<img class="clouds cloud-1" src="images/cloud.png" alt="cloud">
+				<img class="clouds cloud-2" src="images/cloud.png" alt="cloud">
+			</div>
+
+			<div class="containerClouds-bis">
+				<img class="clouds cloud-3" src="images/cloud.png" alt="cloud">
+				<img class="clouds cloud-4" src="images/cloud.png" alt="cloud">
+			</div>
 		</div>
 
-		<div class="containerB">
+		<div class="sunAndMoon">			
+			<img class="sun" src="images/sun.png" alt="sun">
+			<img class="moon" src="images/moon.png" alt="moon">
+			<img class="seagull" src="images/seagull.png" alt="gaviotas">
+		</div>
+
+		<div class="containerForest">
 			<img class="forest" src="images/forest.png" alt="forest">
 		</div>
 
-		<div class="containerC">
+		<div class="containerFlowers">
 			<img class="flowers" src="images/flower2.png" alt="flowers">
 			<img class="flowers" src="images/cactus.png" alt="flowers">
 			<img class="flowers" src="images/flower3.png" alt="flowers">
