--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
 <head>
 	<title>Jardincito</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="keyframes.css">
+	<link rel="stylesheet" type="text/css" href="styles-api.css">
 	<script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-	<div class="containerPrincipal">
+	<div class="containerPrincipal animacion-cielo">
 
 		<div class="allClouds">
 			<div class="containerClouds">
@@ -21,23 +23,30 @@
 		</div>
 
 		<div class="sunAndMoon">			
-			<img class="sun" src="images/sun.png" alt="sun">
-			<img class="moon" src="images/moon.png" alt="moon">
-			<img class="seagull" src="images/seagull.png" alt="gaviotas">
+			<img class="sun animacion-sol" src="images/sun.png" alt="sun">
+			<img class="moon animacion-luna" src="images/moon.png" alt="moon">
+			<img class="seagull animacion-gaviotas" src="images/seagull.png" alt="gaviotas">
 		</div>
 
 		<div class="containerForest">
 			<img class="forest" src="images/forest.png" alt="forest">
 		</div>
 
-		<div class="containerFlowers">
-			<img class="flowers" src="images/flower2.png" alt="flowers">
-			<img class="flowers" src="images/cactus.png" alt="flowers">
-			<img class="flowers" src="images/flower3.png" alt="flowers">
-			<img class="flowers especial-one"src="images/plant.png" alt="flowers">
-			<img class="flowers" src="images/flower4.png" alt="flowers">
-			<img class="flowers" src="images/garden-plant.png" alt="flowers">
-			<img class="flowers" src="images/flower.png" alt="flowers">
+		<div class="blackboard">
+			<span class="temp"></span>
+			<span class="time"></span>
+			<span class="place"></span>
+
+		</div>
+
+		<div class="containerFlowers animacion-flores">
+			<a id="link1" target="_blank"><img class="flowers flower1" src="images/flower2.png" alt="flowers"></a>
+			<a id="link2" target="_blank"><img class="flowers flower2" src="images/cactus.png" alt="flowers"></a>
+			<a id="link3" target="_blank"><img class="flowers flower3" src="images/flower3.png" alt="flowers"></a>
+			<a id="link4" target="_blank"><img class="flowers especial-one"src="images/plant.png" alt="flowers"></a>
+			<a id="link5" target="_blank"><img class="flowers flower5" src="images/flower4.png" alt="flowers"></a>
+			<a id="link6" target="_blank"><img class="flowers flower6" src="images/garden-plant.png" alt="flowers"></a>
+			<a id="link7" target="_blank"><img class="flowers flower7" src="images/flower.png" alt="flowers"></a>
 		</div>
 
 		<div class="grass"></div>
