--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title>Jardincito</title>
 	<meta charset="utf-8">
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">  
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="keyframes.css">
 	<link rel="stylesheet" type="text/css" href="styles-api.css">
